<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="170dp"
        android:layout_height="260dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/poster" />

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        tools:text="Rilis tanggal 2021-05-01"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toEndOf="@id/iv_poster"
        app:layout_constraintTop_toTopOf="@id/iv_poster" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Rating 5.6"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintEnd_toEndOf="@id/tv_release_date"
        app:layout_constraintStart_toStartOf="@id/tv_release_date"
        app:layout_constraintTop_toBottomOf="@id/tv_release_date" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintEnd_toEndOf="@id/tv_rating"
        app:layout_constraintStart_toStartOf="@id/tv_rating"
        app:layout_constraintTop_toBottomOf="@id/tv_rating"
        tools:text="Bahasa en" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintTop_toBottomOf="@id/iv_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Judul" />

    <TextView
        android:id="@+id/tv_genre_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/genre"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="?attr/colorSecondaryVariant"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="@id/tv_genre_title"
        app:layout_constraintStart_toStartOf="@id/tv_genre_title"
        app:layout_constraintTop_toBottomOf="@id/tv_genre_title"
        tools:text="Genre" />

    <TextView
        android:id="@+id/tv_description_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:text="@string/description"
        android:textColor="?attr/colorSecondaryVariant"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_genre" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        tools:text="Deskripsi"
        app:layout_constraintStart_toStartOf="@id/tv_description_title"
        app:layout_constraintEnd_toEndOf="@id/tv_description_title"
        app:layout_constraintTop_toBottomOf="@id/tv_description_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginBottom="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>